unpackaged/main/default/objects/Suivi_TP_INR__c/Suivi_TP_INR__c.object-meta.xml
<CustomObject>
    <label>Suivi TP / INR</label>
    <nameField>
        <displayFormat>TPI-{00000000}</displayFormat>
        <label>Nom de Suivi TP / INR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suivis TP / INR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>