unpackaged/main/default/objects/Suivi_TP_INR__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Suivis TP / INR</relationshipLabel>
    <relationshipName>Suivis_TP_INR</relationshipName>
    <type>Lookup</type>
</CustomField>