unpackaged/main/default/objects/Suivi_TP_INR__c/fields/INR__c.field-meta.xml
<CustomField>
    <fullName>INR__c</fullName>
    <label>INR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>