unpackaged/main/default/objects/Suivi_TP_INR__c/fields/TP__c.field-meta.xml
<CustomField>
    <fullName>TP__c</fullName>
    <label>TP (en %)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>