unpackaged/main/default/objects/Suivi_TP_INR__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Suivis TP / INR</relationshipLabel>
    <relationshipName>Suivis_TP_INR</relationshipName>
    <type>Lookup</type>
</CustomField>